--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,7 @@
     width: 100vw;
     padding-top: 2rem;
 
-    .project-list {
+    .section-list {
         // padding: 2rem 0rem;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
