--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -8,16 +8,16 @@
         // padding: 0rem 0.5rem;
         // margin-top: 1rem;
 
-        // display: grid;
-        // grid-template-columns: repeat(3, minmax(0, 1fr));
-        // gap: 0.5rem;
+        display: grid;
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+        gap: 0.5rem;
 
         a {
             height: max-content;
         }
 
         .full-width {
-            grid-column: span 2;
+            grid-column: span 3;
 
             // display: grid;
             // grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -25,7 +25,7 @@
             .project-preview {
                 .cover-image {
                     grid-column: span 2;
-                    order: 2;
+                    // order: 2;
                     height: 100%;
 
                     .image-section,
@@ -58,78 +58,94 @@
 
         div {
             .project-preview {
-                max-width: 100%;
+                width: 100%;
                 // grid-column: span 2;
-                display: flex;
-                justify-content: center;
-                align-items: end;
+                // display: flex;
+                // justify-content: center;
+                // align-items: end;
                 // height: max-content;
 
-                .cover-image {
-                    // width: min-content;
-                    transition: all 0.25s ease;
-                    margin-bottom: 0.5rem;
-                    width: 100%;
-                    margin: 0rem;
-                    padding: 0rem;
-
-                    .image-section,
-                    .video-section,
-                    .gatsby-image-wrapper {
-                        object-fit: cover;
-                        object-position: center center;
-
-                        width: 100%;
-                        height: 50vh;
-                    }
-
-                    img,
-                    video {
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                        object-position: center center;
-                        border-radius: 2rem;
-
-                    }
-                }
-
-                .cover-title {
+                
+                .preview-title {
                     // opacity: 0;
-                    transform: scale(0);
+                    // transform: scale(1);
                     transition: all 0.5s ease;
-
-                    box-sizing: border-box;
-                    position: absolute;
-                    z-index: 10;
-                    max-width: 30vw;
-                    margin-bottom: 2rem;
-                    // margin: 2rem;
-
-                    justify-content: space-between;
-                    display: grid;
-                    grid-template-columns: 1fr 1fr 1fr 1fr;
-                    gap: 0.25rem;
+                    height: fit-content;
+                    
+                    // box-sizing: border-box;
+                    // position: absolute;
+                    // z-index: 10;
+                    // max-width: 30vw;
+                    // margin-bottom: 2rem;
+                    
+                    // justify-content: space-between;
+                    display: flex;
+                    gap: 0.5rem;
+                    // flex-wrap: wrap;
+                    // grid-template-columns: 1fr 1fr 1fr 1fr;
                     // margin: 0.5rem;
 
-                    padding: 0.75rem;
-                    background: rgb(254, 214, 54);
-                    border-radius: 2rem;
+                    .cover-image {
+                        // width: min-content;
+                        // order: 2;
+                        transition: all 0.25s ease;
+                        margin-bottom: 0.5rem;
+                        // width: 100%;
+                        margin: 0rem;
+                        padding: 0rem;
+    
+                        .image-section,
+                        .video-section,
+                        .gatsby-image-wrapper {
+                            object-fit: contain;
+                            object-position: center center;
+                            width: 100%;
+                            height: 100%;
+                            
+                        }
+                        
+                        img,
+                        video {
+                            width: auto;
+                            height: 10vh;
+                            object-fit:contain;
+                            object-position: center center;
+                            border-radius: 1rem;
+    
+                        }
+                    }
 
+                    
                     h1 {
-                        grid-column: span 4;
+                        display: inline-flex;
+                        width: fit-content;
+                        height: fit-content;
+
+                        padding: 0.75rem;
+                        background: rgb(254, 214, 54);
+                        border-radius: 2rem;
+
+                        // grid-column: span 4;
                         font-size: 3.25rem;
                         font-weight: 90;
                         line-height: 2.75rem;
                         font-family: "Kleukens";
                         display: block;
-                        order: 3;
+                        // order: 3;
                         // width: 100%;
                         // grid-column: span 3;
                     }
-
+                    
                     h2 {
-                        grid-column: span 1;
+                        // order: 3;
+                        width: fit-content;
+                        height: fit-content;
+
+                        // padding: 0.75rem;
+                        // background: rgb(254, 214, 54);
+                        // border-radius: 2rem;
+                        
+                        // grid-column: span 1;
 
                         display: inline;
                         vertical-align: top;
@@ -141,24 +157,25 @@
                         // vertical-align: top;
                     }
 
-                    .type {
-                        grid-column: 2/5;
-                        text-align: end;
+                    // .type {
+                    //     grid-column: 2/5;
+                    //     text-align: end;
 
-                    }
+                    // }
 
-                    .collaborators {
-                        // grid-column: span 2;
-                        display: inline;
-                        grid-column: 2/5;
+                    // .collaborators {
+                    //     // grid-column: span 2;
+                    //     display: inline;
+                    //     grid-column: 2/5;
 
+                    // }
+
+                    .work-year,
+                    .blog-type {
+                        display: none;
                     }
                 }
 
-                .year,
-                .blog-type {
-                    display: none;
-                }
             }
 
             .project-preview:hover {
@@ -170,7 +187,21 @@
 
     }
 
+}
 
+.hero.work-section{
+    // display: grid;
+    // grid-template-columns: 1fr 1fr;
+
+    .project-list{
+        .div{
+            grid-column: span 1;
+
+        }
+        .full-width {
+            grid-column: span 1;
+        }
+    }
 }
 
 .work-page {
