--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -14,6 +14,11 @@
         grid-column: 4/12;
     }
 
+    h1, h2{
+        grid-column: 1/3;
+
+    }
+
     .description{
         font-family: Kleukens;
         font-size: 1.5rem;
