--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -12,7 +12,14 @@
 
         width: 100%;
         height: 50vh;
-        width: 50vw;
+        width: 49vw;
+
+
+        &:hover {
+            padding-left: 0rem;
+            padding-top: 1rem;
+
+        }
     }
 
     h2 {
@@ -21,14 +28,14 @@
         margin: 0.2rem;
         z-index: 1;
         display: inline;
-        width:fit-content;
+        width: fit-content;
 
     }
 
 
     .cover-image {
-        height: 50vh;
-        width: 50vw;
+        // height: 50vh;
+        width: 49vw;
         // z-index: 0;
 
 
@@ -55,7 +62,7 @@
 
         h1 {
             // left: 12.5%;
-            width:fit-content;
+            width: fit-content;
 
             font-size: 3rem;
             font-size: 1.5rem;
