--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -1,257 +1,268 @@
-   
+   .space {
+       grid-column: span 2;
 
-.space {
-    grid-column: span 2;
+       h2 {
+           background-color: rgb(134, 134, 255);
+       }
 
-    h2 {
-        background-color: rgb(134, 134, 255);
-    }
+       .cover-image {
+           height: 40vh;
+           width: 50vw;
+           border-radius: 25vw;
+           overflow: hidden;
 
-    .cover-image{
-        height: 40vh;
-        width: 50vw;
-        border-radius: 25vw;
-        overflow: hidden;
-
-        video{
-            width: 100%;
-            height: 100%;
-        }
-
-        
-    }
-}
-
-.space-post {
-    padding: 1rem;
-    padding-top: 5rem;
-
-    .postcover {
-        width: 100%;
-        // display: flex;
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-
-        border-top: 1px;
-        border-color: aliceblue;
-        // border-style: solid;
-
-        // grid-template-columns: repeat(12, 1fr);
-        padding-top: 1rem;
-        margin-bottom: 1rem;
-
-        gap: 1rem;
-
-        &:hover {
-            padding-left: 0rem;
-
-        }
-
-        // .preview-title {
-        .project-description {
-            grid-column: span 8;
-            
-            h1 {
-                font-size: 5rem;
-            }
-        }
-        
-        
-        
-        h2 {
-            font-size: 1.5rem;
-            display: inline;
-            width: max-content;
-        }
-        
-        
-        .cover-image {
-            grid-column: span 2;
-
-            img,
-            video {
-                width: min-content;
-                height: 100%;
-                border-radius: 1rem;
-            }
-
-            p.caption {
-                margin: 0.5rem;
-                line-height: 1.2rem;
-                font-weight: 300;
-            }
-        }
+           video {
+               width: 100%;
+               height: 100%;
+           }
 
 
-        .type {
-            grid-column: span 1;
+       }
+   }
 
-        }
-    }
+   .space-post {
+       padding: 1rem;
+       padding-top: 5rem;
 
-    .blog-post-content {
-        // width:100vw;
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        gap: 1rem;
+       .postcover {
+           width: 100%;
+           height: 100vh;
+           display: flex;
+           // justify-content: space-between;
+           // display: grid;
+           // grid-template-columns: repeat(12, 1fr);
 
-        .description {
-            grid-column: 4/11;
-            margin-bottom: 3.5rem;
-            font-size: 1.5rem;
+           border-top: 1px;
+           border-color: aliceblue;
+           // border-style: solid;
 
-            // width: 100%;
+           // grid-template-columns: repeat(12, 1fr);
+           padding-top: 1rem;
+           margin-bottom: 1rem;
 
-        }
+           gap: 1rem;
 
-        .image-section {
-            width: 100%;
-            display: flex;
-            flex: 1 1 0;
+           &:hover {
+               padding-left: 0rem;
 
-            gap: 1rem;
+           }
 
-            div {
-                flex-basis: 100%;
-            }
+           // .preview-title {
+           .project-description {
+               grid-column: span 8;
 
-            .iFrame {
-
-                iframe {
-                    width: 100%;
-                    height: 80vh;
-                    border-radius: 2rem;
-                    // zoom: 1.25;
-                }
-
-                p.caption {
-                    text-align: center;
-                }
-            }
-        }
-
-        .text-section {
-            max-width: 100%;
-            display: flex;
-            gap: 1rem;
-        }
-    }
-}
-
-    // .space-post {
-    //     width: 100vw;
-    //     min-height: 100vh;
-    //     padding-bottom: 10vh;
-    //     padding: 0.5rem;
-    //     padding-top: 2rem;
-
-    //     .project-preview {
-    //         .cover-image {
-    //             height: 90vh;
-    //             width: 100vw;
-    //         }
-    //     }
-
-    //     .deep-sea-bots {
-    //         .cover-image {
-    //             background-color: rgba(255, 255, 255, 0.5);
-    //             overflow: hidden;
-
-    //             .image-section {
-
-    //                 // overflow: visible;
-    //                 iframe {
-    //                     // overflow: visible;
-    //                     width: calc(100% * 2.2);
-    //                     height: calc(100% * 2);
-    //                     zoom: 0.5;
-
-    //                     -ms-zoom: 0.5;
-    //                     transform: scale(0.5) translateX(-200px);
-
-    //                     -moz-transform: scale(0.5);
-    //                     -moz-transform-origin: -200px 0;
-    //                     -o-transform: scale(0.5);
-    //                     -o-transform-origin: -200px 0;
-    //                     -webkit-transform: scale(0.5);
-    //                     -webkit-transform-origin: -200px 0;
-
-    //                 }
-    //             }
-    //         }
-    //     }
-    // }
-
-    .full-width {
-        .deep-sea-bots {
-            .cover-image {
-                background-color: rgba(255, 255, 255, 0.5);
-                overflow: hidden;
-
-                .image-section {
-
-                    // overflow: visible;
-                    iframe {
-                        // overflow: visible;
-                        width: calc(100% * 2.2);
-                        height: calc(100% * 2);
-                        zoom: 0.5;
-
-                        -ms-zoom: 0.5;
-                        transform: scale(0.5) translateX(-200px);
-
-                        -moz-transform: scale(0.5);
-                        -moz-transform-origin: -200px 0;
-                        -o-transform: scale(0.5);
-                        -o-transform-origin: -200px 0;
-                        -webkit-transform: scale(0.5);
-                        -webkit-transform-origin: -200px 0;
-
-                    }
-                }
-            }
-        }
-    }
+               h1 {
+                   font-size: 5rem;
+               }
+           }
 
 
 
-    .space-post-content {
-        padding: 1rem;
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        gap: 1rem;
+           h2 {
+               font-size: 1.5rem;
+               display: inline;
+               // width: max-content;
+           }
 
-        .description {
-            grid-column: span 9;
-            margin-bottom: 3.5rem;
 
-            p {
-                font-size: 2rem;
-                line-height: 2.2rem;
-            }
-        }
+           .cover-image {
+               position: absolute;
+               grid-column: span 8;
+               height: 80vh;
+               width: 80%;
+               border-radius: 25vw;
+               overflow: hidden;
 
-        .image-section {
-            width: 100%;
-            display: flex;
-            flex: 1 1 0;
+               img,
+               video {
+                   width: min-content;
+                   height: 100%;
+                   border-radius: 1rem;
+               }
 
-            gap: 1rem;
+               iframe {
+                   height: 100%;
+                   width: 100%;
+               }
 
-            div {
-                flex-basis: 100%;
-            }
-        }
 
-        .text-section {
-            max-width: 100%;
-            display: flex;
-            gap: 1rem;
-        }
-    }
+               p.caption {
+                   margin: 0.5rem;
+                   line-height: 1.2rem;
+                   font-weight: 300;
+               }
+           }
 
-    p.caption {
-        margin-top: 0.2rem;
-        font-family: Kleukens;
-        font-size: 0.8rem;
-    }
+           .title-img {
+               // grid-column: span 2;
+               display: inline-flex;
+               justify-items: flex-end;
+               margin-left: auto;
+            //    max-width: 17vw;
+            //    object-fit: contain;
+
+           }
+
+           .type {
+               justify-self: flex-end;
+               margin-left: 0rem;
+               width: fit-content;
+           }
+       }
+
+       .space-post-content {
+           // width:100vw;
+           display: grid;
+           grid-template-columns: repeat(12, 1fr);
+           gap: 1rem;
+
+           .description {
+               grid-column: 4/11;
+               margin-bottom: 3.5rem;
+               font-size: 1.5rem;
+
+               // width: 100%;
+
+           }
+
+           .image-section {
+               width: 100%;
+               display: flex;
+               flex: 1 1 0;
+
+               gap: 1rem;
+
+               div {
+                   flex-basis: 100%;
+               }
+
+               .iFrame {
+
+                   iframe {
+                       width: 100%;
+                       height: 80vh;
+                       border-radius: 2rem;
+                       // zoom: 1.25;
+                   }
+
+                   p.caption {
+                       text-align: center;
+                   }
+               }
+           }
+
+           .text-section {
+               max-width: 100%;
+               display: flex;
+               gap: 1rem;
+           }
+       }
+   }
+
+   .deep-sea-bots {
+       .postcover {
+           .cover-image {
+               background-color: rgba(255, 255, 255, 0.5);
+               overflow: hidden;
+
+
+               // overflow: visible;
+               iframe {
+                   // overflow: visible;
+                   width: calc(100% * 2.2);
+                   height: calc(100% * 2);
+                   zoom: 1;
+
+                   -ms-zoom: 0.5;
+                   transform: scale(0.5) translateX(-200px);
+
+                   -moz-transform: scale(0.5);
+                   -moz-transform-origin: -200px 0;
+                   -o-transform: scale(0.5);
+                   -o-transform-origin: -200px 0;
+                   -webkit-transform: scale(0.60);
+                   -webkit-transform-origin: -20% -20%;
+
+               }
+
+           }
+
+           .title-img {   
+            max-width: 17vw;
+           }
+       }
+   }
+
+   .full-width {
+       .deep-sea-bots {
+           .cover-image {
+               background-color: rgba(255, 255, 255, 0.5);
+               overflow: hidden;
+
+               .image-section {
+
+                   // overflow: visible;
+                   iframe {
+                       // overflow: visible;
+                       width: calc(100% * 2.2);
+                       height: calc(100% * 2);
+                       zoom: 0.5;
+
+                       -ms-zoom: 0.5;
+                       transform: scale(0.5) translateX(-200px);
+
+                       -moz-transform: scale(0.5);
+                       -moz-transform-origin: -200px 0;
+                       -o-transform: scale(0.5);
+                       -o-transform-origin: -200px 0;
+                       -webkit-transform: scale(0.5);
+                       -webkit-transform-origin: -200px 0;
+
+                   }
+               }
+           }
+       }
+   }
+
+
+
+   .space-post-content {
+       padding: 1rem;
+       display: grid;
+       grid-template-columns: repeat(12, 1fr);
+       gap: 1rem;
+
+       .description {
+           grid-column: span 9;
+           margin-bottom: 3.5rem;
+
+           p {
+               font-size: 2rem;
+               line-height: 2.2rem;
+           }
+       }
+
+       .image-section {
+           width: 100%;
+           display: flex;
+           flex: 1 1 0;
+
+           gap: 1rem;
+
+           div {
+               flex-basis: 100%;
+           }
+       }
+
+       .text-section {
+           max-width: 100%;
+           display: flex;
+           gap: 1rem;
+       }
+   }
+
+   p.caption {
+       margin-top: 0.2rem;
+       font-family: Kleukens;
+       font-size: 0.8rem;
+   }
