--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -19,11 +19,11 @@
         font-weight: bold;
     }
 
-    p{
+    p {
         font-size: 1.5rem;
         line-height: 2rem;
         margin-bottom: 1rem;
-     }
+    }
 
     //  p {
     //     font-size: 2rem;
@@ -51,7 +51,8 @@
 }
 
 .swiper {
-    height: 100%;
+    height: 80vh;
+    width: 100%;
     // z-index: -1;
     // .swiper-buttons{
     //     position: absolute;
@@ -66,8 +67,16 @@
     //     }
     // }
     .swiper-slide {
-        width: auto;
-        max-width: 100%;
+        // width: auto;
+        width: 100%;
+        height: 100%;
+
+        img,
+        video {
+            width: min-content;
+            height: 100%;
+            border-radius: 1rem;
+        }
 
     }
 }
