--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -25,7 +25,7 @@
         overflow: hidden;
 
         // width: 100%;
-        height: 50vh;
+        height: 55vh;
         width: 50vw;
 
 
@@ -71,9 +71,11 @@
         img,
         video {
             object-fit: cover;
-            // min-width: 100%;
+            min-width: 50vw;
             // min-height: 100%;
-            height: 100%;
+            // height: 100%;
+            min-height: 55vh;
+
             // width: 100%;
             border-radius: 0rem;
         }
