--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -42,12 +42,73 @@
         font-family: Kleukens;
     }
 
-    //  p {
-    //     font-size: 2rem;
-    //     line-height: 2.5rem;
-    //     margin-bottom: 1rem;
-    //     font-family: Kleukens;
+    a {
+        color: grey;
+    }
+
+    // .image-section {
+    //     height: 100%;
+
+    // .video-section {
+    video {
+        // height: 80vh;
+        width: 100%;
+    }
+
+    img {
+        // height: 80vh;
+        width: 100%;
+    }
+
+    // width: 30vw;
     // }
+    // }
+
+}
+
+.text-section {
+    // margin-bottom: 3.5rem;
+    height: 100%;
+    margin-bottom: 4.5rem;
+
+    font-family: Kleukens;
+    word-wrap: break-word;
+
+    display: flex;
+    flex: 1 1 0;
+
+    gap: 1rem;
+
+    div {
+        flex-basis: 100%;
+    }
+
+    h2 {
+        margin-bottom: 1.5rem;
+        font-size: 1.8rem;
+        // font-weight: bold;
+    }
+
+    h3 {
+        margin-bottom: 1.5rem;
+        font-size: 1.25rem;
+        font-weight: bold;
+    }
+
+    p {
+        font-size: 1.5rem;
+        line-height: 2rem;
+        margin-bottom: 1rem;
+    }
+
+    p.caption {
+        font-size: 1rem;
+        line-height: 1.2rem;
+        font-weight: 300;
+        margin: 0.5rem;
+        margin-top: 0.2rem;
+        font-family: Kleukens;
+    }
 
     a {
         color: grey;
