--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,10 @@
     // width: 100vw;
     // padding-top: 6rem; 
 
+    .top-space{
+        height: 8vh;
+    }
+
     .section-list {
         // padding: 2rem 0rem;
         display: grid;
